--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "bootstrap": "^5.1.0",
+    "lodash": "^4.17.21",
     "react": "^17.0.1",
+    "react-autocomplete": "^1.8.1",
+    "react-bootstrap-typeahead": "^5.2.0",
     "react-dom": "^17.0.1",
     "react-hot-loader": "^4.13.0"
   },
