added code for organization chart

--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,17 @@
 {
   "presets": [
-    // "@babel/preset-env",
-    // "@babel/preset-react"
+    [
+      '@babel/preset-env',
+      {
+        targets: {
+          esmodules: true,
+        },
+      },
+    ],
     "react-app"
   ],
   "plugins": [
-    // "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-transform-runtime",
     "react-hot-loader/babel"
   ]
 }
